Update dependencies to point at crates.io slackbot

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,5 @@ version = "0.1.0"
 authors = ["Matt Jones <mthjones@gmail.com>"]
 
 [dependencies]
+slackbot = "*"
 rand = "*"
-
-[dependencies.slackbot]
-path = "../slackbot"
